# optix-toolkit

./: README.md
DemandLoading/DemandLoading/docs/: README.md
DemandLoading/DemandLoading/src/: DemandPageLoaderImpl.cpp
DemandLoading/DemandLoading/src/Memory/: DeviceMemoryManager.h
DemandLoading/DemandLoading/src/Textures/: DemandTextureImpl.cpp
DemandLoading/DemandLoading/tests/: CMakeLists.txt  DeferredImageLoading.cpp
NeuralTextures/: CMakeLists.txt  InferenceOptix.h  NeuralTextureSource.cpp  NeuralTextureSource.h  NtcImageReader.cpp  NtcImageReader.h  NtcTextureSet.h  README.md
NeuralTextures/include/OptiXToolkit/NeuralTextures/: Texture2DNeural.h
NeuralTextures/tests/: CMakeLists.txt  TestNeuralTextureSource.cpp
ShaderUtil/: CMakeLists.txt
examples/: CMakeLists.txt
examples/DemandLoading/: CMakeLists.txt
examples/DemandLoading/DemandPbrtScene/: Application.cpp  DemandPbrtScene.cu
examples/DemandLoading/DemandPbrtScene/tests/: TestPbrtScene.cpp
examples/DemandLoading/DemandTextureSampler/: CMakeLists.txt  DemandTextureSampler.cpp  DemandTextureSampler.cu  DemandTextureSampler.h  README.md
examples/DemandLoading/NeuralTextureViewer/: CMakeLists.txt  NeuralTextureViewer.cpp  NeuralTextureViewer.cu  README.md
examples/DemandLoading/NeuralTextureViewer/tests/: CMakeLists.txt
examples/DemandLoading/UdimTextureViewer/: UdimTextureViewer.cpp  UdimTextureViewer.cu
examples/OTKAppBase/include/OptiXToolkit/OTKAppBase/: OTKApp.h  OTKAppPerDeviceOptixState.h
examples/OTKAppBase/src/: OTKApp.cpp
examples/SplatBench/: CMakeLists.txt  PlyLoader.h  README.md  SplatBench.cpp  SplatBench.cu  SplatBenchParams.h  SplatIntersections.h  SplatLoader.h  SplatTypes.h
examples/SplatBench/old/: DeviceVec.h  SphereParticleIntersection.h  TransparencyViewerBak.cu  TransparencyViewerMemoryPools.cu
